--- a/local/templates/main/components/bitrix/news.list/accommodation_rooms/style.css
+++ b/local/templates/main/components/bitrix/news.list/accommodation_rooms/style.css
@@ -1,56 +1,814 @@
-/* contacts table */
+/*section rooms */
 
-.contacts__table {
-    width: 80%;
-    margin: 0 auto;
+.popup__fade {
+    display: none;
 }
 
-.contacts__row {
-    border-collapse: collapse;
-    border-top: 1px solid #00aced;
-    padding: 10px 0;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+.popup__fade::before {
+    content: '';
+    background: #000;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.7;
+    z-index: 5;
 }
 
-.contacts__row:last-child {
-    border-bottom: 1px solid #00aced;
+.popup__modal {
+    position: fixed;
+    top: 0;
+    left: 20%;
+    width: 60%;
+    height: 100vh;
+    padding: 30px;
+    background: #fff;
+    z-index: 99999;
+    opacity: 1;
+    overflow: auto;
 }
 
-.contacts__post {
+.popup__close {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: #fff;
+    font-size: 30px;
+    cursor: pointer;
+}
+
+.section-rooms {
+    overflow: hidden;
+    margin: 10% 0;
+}
+
+.rooms__title {
+    margin-left: 5%;
+    font-size: 17px;
+    font-weight: normal;
+    line-height: 1.5;
+    margin-bottom: 30px;
+}
+
+.rooms__title::after {
+    content: '';
+    display: block;
+    margin-top: 6px;
+    width: 15%;
+    height: 4px;
+    background: #00acec;
+}
+
+.rooms__buttons {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background: #89c43e;
+    color: #fff;
+    cursor: pointer;
+}
+
+.rooms__button {
+    font-size: 14px;
+    width: 255px;
+    padding: 20px 0;
+    text-align: center;
+    font-family: HelveticaNeueCyr;
+    font-weight: 400;
+}
+
+.rooms__button-active {
+    background: rgba(0, 0, 0, 0.2);
+}
+
+.rooms__wrapper {
+    display: none;
+    margin-top: 10px;
+    width: 100%;
+}
+
+.rooms__item {
+    padding: 0 7px;
+}
+
+.room {
+    position: relative;
+    overflow: hidden;
+    height: auto;
+    opacity: 1;
+}
+
+.room:hover::after {
+    content: 'Подробнее';
     display: block;
     width: 100%;
-    margin-bottom: 5px;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    width: 55%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    cursor: pointer;
 }
 
-.contacts__item {
-    padding: 10px 0;
-    vertical-align: middle;
+.room__img {
+    -o-object-fit: cover;
+    object-fit: cover;
+    width: auto;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    z-index: -1;
+}
+
+.room__wrapper {
+    margin-left: auto;
+    height: auto;
+    min-height: 330px;
+    max-height: 330px;
+    width: 45%;
+    padding: 20px 13px;
+    background: #00acec;
+    color: #fff;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    overflow: auto;
+}
+
+.room__title {
     font-size: 14px;
+    line-height: 1.3;
+    margin-bottom: 6px;
 }
 
-.contacts__phone {
+.room__title::after {
+    content: '';
     display: block;
-    text-align: right;
+    width: 100%;
+    height: 1px;
+    background: #fff;
+    margin-top: 13px;
 }
 
-@media (max-width: 991.98px) {
-    .contacts__table {
-        width: 95%;
+.room__list {
+    max-height: 190px;
+    overflow: auto;
+}
+
+.room__item {
+    font-size: 11px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.room__icon {
+    display: block;
+    width: 29px;
+    height: 25px;
+    margin-right: 10px;
+    background-size: 30px;
+    background: url("img/room_icon.png") no-repeat;
+    background-size: 35px;
+}
+
+.room__text {
+    width: 70%;
+    line-height: 1.5;
+}
+
+.room__text sup {
+    font-size: 8px;
+    vertical-align: top;
+}
+
+.room__button {
+    background: rgba(0, 0, 0, 0.5);
+    outline: none;
+    border: 1px solid #fff;
+    color: #fff;
+    font-size: 13px;
+    width: 111px;
+    padding: 10px 0;
+    -webkit-transition: background 0.5s;
+    -o-transition: background 0.5s;
+    transition: background 0.5s;
+    position: absolute;
+    bottom: 20px;
+    cursor: pointer;
+}
+
+.room__button:hover {
+    background: #fff;
+    color: #00acec;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s;
+}
+
+.seat {
+    background-position: 8% 0.9%;
+    background-size: 100px;
+}
+
+.parking {
+    background-position: 50% 8%;
+}
+
+.bed {
+    background-position: 51% 22%;
+    background-size: 30px;
+}
+
+.persons {
+    background-position: 50% 38%;
+    background-size: 40px;
+}
+
+.shower {
+    background-position: 50% 53%;
+}
+
+.square {
+    background-position: 50% 68%;
+}
+
+.wc {
+    background-position: 50% 83%;
+}
+
+.playground {
+    background-position: 50% 100%;
+}
+
+.hotelroom {
+    padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    color: #fff;
+    font-size: 12px;
+}
+
+.hotelroom__wrapper {
+    padding: 13px;
+    width: 40%;
+    height: 100%;
+    background: #f3b221;
+}
+
+.hotelroom__title {
+    font-size: 16px;
+    margin-bottom: 20px;
+    margin-right: 30px;
+}
+
+.hotelroom__title::after {
+    width: 15%;
+    height: 3px;
+}
+
+.hotelroom__text {
+    line-height: 1.2;
+    margin-bottom: 45px;
+}
+
+.hotelroom__text p {
+    margin-bottom: 10px;
+}
+
+.hotelroom__list {
+    margin-bottom: 23px;
+    max-height: none;
+}
+
+.hotelroom__button {
+    position: static;
+    width: 100%;
+    background: transparent;
+    margin-bottom: 10px;
+}
+
+.hotelroom__button:hover {
+    color: #fff;
+    background: #f3b221;
+}
+
+.hotelroom__button-white {
+    text-transform: uppercase;
+    background: #fff;
+    color: #f3b221;
+}
+
+.hotelroom__button-white:hover {
+    color: #fff;
+    background: #f3b221;
+}
+
+.hotelroom__gallery {
+    padding: 6px;
+    width: 59%;
+    margin-left: 0.5%;
+}
+
+.hotelroom__prev {
+    width: 100%;
+    height: 50%;
+    min-height: 300px;
+    margin: 0 auto 10px;
+    position: relative;
+    overflow: hidden;
+}
+
+.hotelroom__images {
+    width: 100%;
+    height: 100px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+}
+
+.hotelroom__item {
+    width: 24%;
+    height: 100px;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.hotelroom__item .room__img {
+    height: 100%;
+    width: 100%;
+}
+
+.hotelroom__item:not(:last-child) {
+    margin-right: 1.333%;
+}
+
+.hotelroom__item:hover .room__img {
+    -webkit-transform: translate(-50%, -50%) scale(1.1);
+    -ms-transform: translate(-50%, -50%) scale(1.1);
+    transform: translate(-50%, -50%) scale(1.1);
+}
+
+.rooms__arrows-container {
+    position: absolute;
+    top: 40%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 60px;
+    height: 60px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    cursor: pointer;
+    z-index: 1;
+}
+
+.rooms__arrows-container:hover .rooms__arrow {
+    -webkit-animation: arrowMovement 2s ease-in-out infinite;
+    animation: arrowMovement 2s ease-in-out infinite;
+}
+
+.rooms__arrows-container:hover .rooms__arrow-two {
+    -webkit-animation: arrowMovement 2s .5s ease-in-out infinite;
+    animation: arrowMovement 2s .5s ease-in-out infinite;
+}
+
+.rooms__arrows-container:hover .rooms__arrow-three {
+    -webkit-animation: arrowMovement 2s 1s ease-in-out infinite;
+    animation: arrowMovement 2s 1s ease-in-out infinite;
+}
+
+.container-next {
+    right: 20%;
+}
+
+.container-prev {
+    left: 10%;
+    -webkit-transform: rotate(-180deg);
+    -ms-transform: rotate(-180deg);
+    transform: rotate(-180deg);
+}
+
+.rooms__arrow {
+    display: block;
+    padding: 10px;
+    -webkit-box-shadow: 2px -2px white inset;
+    box-shadow: 2px -2px white inset;
+    -webkit-transform: rotate(225deg);
+    -ms-transform: rotate(225deg);
+    transform: rotate(225deg);
+    opacity: 1;
+    position: absolute;
+    top: 30%;
+    left: 30%;
+}
+
+.rooms__arrow-one {
+    opacity: 1;
+}
+
+@keyframes arrowMovement {
+    0% {
+        left: 0;
+        opacity: 0;
+    }
+    70% {
+        opacity: 1;
+    }
+    100% {
+        left: 30px;
+        opacity: 0;
     }
 }
 
-@media (max-width: 470px) {
-    .contacts__item {
+@media (max-width: 1199.98px) {
+    .room:hover::after {
+        width: 50%;
+    }
+    .room__title {
+        margin-bottom: 10px;
+    }
+    .room__title::after {
+        margin-top: 10px;
+    }
+    .room__wrapper {
+        width: 50%;
+    }
+    .room__item {
+        margin-bottom: 5px;
+    }
+}
+
+@media (max-width: 991.98px) {
+    .room:hover::after {
+        width: 49%;
         font-size: 12px;
+    }
+    .room__title {
+        font-size: 12px;
+    }
+    .room__wrapper {
+        padding: 10px 7px;
+        width: 51%;
+    }
+    .room__item {
+        font-size: 10px;
+        line-height: 1.3;
+    }
+    .room__icon {
+        margin-right: 5px;
+    }
+    .room__text {
+        width: 75%;
+    }
+    .hotelroom__title {
+        font-size: 16px;
+    }
+    .hotelroom__text {
+        font-size: 11px;
+        margin-bottom: 35px;
+    }
+    .rooms__arrows-container {
+        width: 50px;
+        height: 50px;
+    }
+    .rooms__arrow {
+        left: 20%;
+    }
+    @-webkit-keyframes arrowMovement {
+        0% {
+            left: 0;
+            opacity: 0;
+        }
+        70% {
+            opacity: 1;
+        }
+        100% {
+            left: 25px;
+            opacity: 0;
+        }
+    }
+    @keyframes arrowMovement {
+        0% {
+            left: 0;
+            opacity: 0;
+        }
+        70% {
+            opacity: 1;
+        }
+        100% {
+            left: 25px;
+            opacity: 0;
+        }
+    }
+}
+
+@media (max-width: 767.98px) {
+    .popup__modal {
+        left: 10%;
+        width: 80%;
+    }
+    .container-next {
+        right: 5%;
+    }
+    .container-prev {
+        left: 5%;
+    }
+    .room__wrapper {
+        min-height: 300px;
+        max-height: 300px;
+    }
+    .room__list {
+        max-height: 170px;
+    }
+    .hotelroom__gallery {
+        width: 62%;
+    }
+    .hotelroom__wrapper {
+        width: 37%;
+    }
+    .hotelroom__list {
+        max-height: none;
+    }
+}
+
+@media (max-width: 575.98px) {
+    .popup__close {
+        color: #000;
+        font-size: 40px;
+    }
+    .rooms__title {
+        font-family: HelveticaBold;
+        font-weight: bold;
+        font-size: 22px;
+    }
+    .rooms__buttons {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-pack: start;
+        -ms-flex-pack: start;
+        justify-content: flex-start;
+        -webkit-box-align: start;
+        -ms-flex-align: start;
+        align-items: flex-start;
+        padding-left: 65px;
+    }
+    .rooms__button {
+        width: 100%;
+        text-align: left;
+        font-size: 18px;
+        padding: 25px 0;
+    }
+    .rooms__button::before {
+        content: '';
+        display: inline-block;
+        border: 4px solid #fff;
+        width: 10px;
+        height: 10px;
+        background: #fff;
+        -webkit-box-sizing: content-box;
+        box-sizing: content-box;
+        vertical-align: text-top;
+        margin-right: 10px;
+        -webkit-transition: background 0.3s;
+        -o-transition: background 0.3s;
+        transition: background 0.3s;
+        cursor: pointer;
+    }
+    .rooms__button-active {
+        background: transparent;
+    }
+    .rooms__button-active::before {
+        background: #89c43e;
+    }
+    .room:hover::after {
+        display: none;
+    }
+    .room__wrapper {
+        width: 100%;
+        background: transparent;
+        position: relative;
+        z-index: 1;
+        min-height: 400px;
+        max-height: 400px;
+        padding: 25px;
+    }
+    .room__wrapper::after {
+        content: '';
+        display: block;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: #00acec;
+        opacity: .6;
+        z-index: -1;
+    }
+    .room__title {
+        font-size: 22px;
+    }
+    .room__list {
+        max-height: 240px;
+    }
+    .room__item {
+        font-size: 16px;
+        margin-bottom: 10px;
+    }
+    .room__icon {
+        width: 36px;
+        height: 30px;
+        background-size: 40px;
+    }
+    .room__button {
+        font-size: 22px;
+        width: 185px;
+        padding: 16px 0;
+    }
+    .hotelroom {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        height: 100%;
+    }
+    .hotelroom__title {
+        margin-right: 0;
+    }
+    .hotelroom__title::after {
+        display: none;
+    }
+    .hotelroom__gallery {
+        width: 100%;
+        padding: 0;
+        margin-left: 0;
+    }
+    .hotelroom__prev {
+        display: none;
+    }
+    .hotelroom__images {
+        width: 100%;
+        height: 300px;
+        display: block;
+    }
+    .hotelroom__item {
+        width: 100;
+        height: 300px !important;
+    }
+    .hotelroom__item:hover .room__img {
+        -webkit-transform: translate(-50%, -50%) scale(1);
+        -ms-transform: translate(-50%, -50%) scale(1);
+        transform: translate(-50%, -50%) scale(1);
+    }
+    .hotelroom__item:not(:last-child) {
+        margin-right: 0;
+    }
+    .hotelroom__wrapper {
+        width: 100%;
+        overflow: auto;
+    }
+    .hotelroom__text {
+        font-size: 14px;
+    }
+    .hotelroom__list {
+        max-height: none;
+    }
+    .hotelroom__button {
+        width: 100%;
+        display: block;
+        font-size: 18px;
+    }
+    .hotelroom__arrow {
+        position: absolute;
+        top: 40%;
+        display: block;
+        width: 60px;
+        height: 60px;
+        background: #fff;
+        border: 2px solid #f3b221;
+        border-radius: 50%;
+        color: #f3b221;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        font-size: 30px;
+        z-index: 1;
+        -webkit-transition: .3s;
+        -o-transition: .3s;
+        transition: .3s;
+        cursor: pointer;
+    }
+    .hotelroom__arrow-next {
+        left: 5px;
+    }
+    .hotelroom__arrow-next:hover {
+        -webkit-transition: .3s;
+        -o-transition: .3s;
+        transition: .3s;
+        -webkit-transform: translate(-5px, 0);
+        -ms-transform: translate(-5px, 0);
+        transform: translate(-5px, 0);
+    }
+    .hotelroom__arrow-prev {
+        right: 5px;
+    }
+    .hotelroom__arrow-prev:hover {
+        -webkit-transition: .3s;
+        -o-transition: .3s;
+        transition: .3s;
+        -webkit-transform: translate(5px, 0);
+        -ms-transform: translate(5px, 0);
+        transform: translate(5px, 0);
+    }
+    .seat {
+        background-size: 100px;
+    }
+}
+
+@media (max-width: 450px) {
+    .popup__modal {
+        left: 5%;
+        width: 90%;
     }
 }
 
 @media (max-width: 400px) {
-    .contacts__table {
-        width: 100%;
+    .rooms__buttons {
+        padding-left: 25px;
     }
-    .contacts__item {
-        font-size: 10px;
+    .room__title {
+        font-size: 18px;
+    }
+    .room__item {
+        font-size: 14px;
+    }
+    .room__button {
+        font-size: 18px;
+        padding: 10px 0;
+    }
+    .hotelroom__arrow {
+        width: 40px;
+        height: 40px;
+        font-size: 20px;
+        top: 45%;
     }
 }
